"ChangeLog"

2005-11-02	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-63-merged-cflat-02-05:
	  Merged in bug-fix branch -cflat-02, revision -05.  
	  hackt cflat prsim is ready for prime time!


2005-11-02	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-62-cflat-02-05:
	  Cleaned up obsolete code, committed switches.  
	  Added process cflat prsim tests.  
	  Target met for the branch, closing after verification.  


2005-11-01	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-62-cflat-02-04:
	  BUG FIXED: cases connect/122-127.in
		Completely re-worked cflatting of aliases, with new idea.
	  Obsolete: Object/common/alias_string_set.{h,cc}
		no longer used, so we're trimming the fat.  
	  Deprecated (and switched out) the old cflat_connect methods
		in global_entry and state_manager.
		(renamed old cflat to cflat_prs)
	  New cflat_aliases routines added to footprint and instance 
		hierarchy.  footprint::cflat_aliases() walks every
		instance and subinstance in the hierarchy recursively, 
		using the result of an allocated state_manager to 
		print aliases to canonical names.  
	  Added class_trait: print_cflat_leaf, true only for bools, 
		because cflat tools only deal with bools (nodes).  
	  As a result of new cflat-aliases, some tests were updated, 
		some with trivially reorder aliases, a few with
		added missing aliases from before, oops!
	  TODO: clean house: delete obsoleted and unused code.  
		Remove alias_string_set.*.
		Commit devel_switches.h.  
		Hand-verify and enable parser/process cflat tests. 


2005-10-31	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-62-cflat-02-03:
	  New idea: instead of computing hierarchical cflat alias, 
		just traverse the top-level footprint hierarchically to
		guarantee visiting each bool alias *exactly* once.  DUH!
		TODO: this, next.
	  Attempted to create and use global_entry parent back-references, 